--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,150 @@
 #ffffff BLANC
 #fd5904 ORANGE
 */
+
+/* -- Nav bar --*/
+
+*{
+    box-sizing: border-box;
+    margin: 0px;
+    width: 100%;
+}
+
+body{
+    background-color: rgba(54, 55, 8, 0.179);
+}
+
+.navbar{
+    max-width: 100%;
+    display: grid;
+    grid-template-columns: 0.1fr 1fr 0.1fr;
+    grid-template-areas: 
+      "search colors btn";
+}
+
+.search{
+    box-shadow: 2px 2px 10px grey;
+    background-color: rgb(226, 226, 226);
+    grid-area: search;
+    margin:2rem 0 0 4rem;
+    padding: 0.5rem;
+    border-radius: 11px;
+    width:100%;
+}
+
+ul{
+    margin-left: 4rem;
+}
+
+li{
+    background-color: rgb(201, 147, 147);
+    margin:2rem 0.5rem;
+    padding: 0.5rem;
+    border-radius: 50px;
+    width: 2.5rem;
+    height: 2.5rem;
+    float: left;
+    list-style-type: none;
+    grid-area: colors;
+}
+.ROUGE{
+    background-color:#da291d ;
+}
+.YELLOW{
+    background-color:#fed601 ;
+}
+.BLUE{
+    background-color:#104b83 ;
+}
+.VERT{
+    background-color:#02891a  ;
+}
+.ROSE{
+    background-color:#facbcc;
+}
+.NOIR{
+    background-color:#000000;
+}
+.ORANGE{
+    background-color:#fd5904;
+}
+ .menu{
+     width: 100%;
+     height: 100%;
+     margin-right: 0;
+     padding: 2rem 3rem 0 0;
+     grid-area: btn;
+    /* background-color: gray; */
+    text-align:right;
+ }
+ 
+ /*-- Container --*/
+ .container{
+     margin: 2.5rem auto;
+     padding: auto;
+     width:80%;
+     height: 45rem;
+     display: grid;
+     grid-template-columns:1fr 1fr 1fr;
+     grid-template-rows:1fr 1fr 1fr;
+     grid-template-areas: 
+       "left-up center-up right-up "
+       "left-down center-down right-down";
+       grid-gap: 2%;
+ }
+.category1{
+    grid-area: left-up;
+    width: 80%;
+    margin: 0 auto;
+    box-shadow: 2px 2px 10px grey;
+    
+}
+.category2{
+    grid-area: center-up;
+    width: 80%;
+    margin: 0 auto;
+    box-shadow: 2px 2px 10px grey;
+} 
+.category3{
+    grid-area: right-up;
+    width: 80%;
+    margin: 0 auto;
+    box-shadow: 2px 2px 10px grey;
+} 
+.category4{
+    grid-area: left-down;
+    width: 80%;
+    margin: 0 auto;
+    box-shadow: 2px 2px 10px grey;
+} 
+.category5{
+    grid-area: center-down;
+    width: 80%;
+    margin: 0 auto;
+    box-shadow: 2px 2px 10px grey;
+} 
+.category6{
+    grid-area: right-down;
+    width: 80%;
+    margin: 0 auto;
+    box-shadow: 2px 2px 10px grey;
+} 
+
+/*-- Footer --*/
+footer{
+  margin-bottom: 0;
+  padding: 1rem;
+  width: 100%;
+  height:48px;
+  background-color:#646262;
+  color: white;
+  font-size: 18px;
+
+}
+
+.rights{
+    background-color:#646262;
+    text-align: left;
+    padding-left: 40px;
+}
+
