modification + starting sign up: login in

--- a/view/index.html
+++ b/view/index.html
@@ -28,7 +28,7 @@
             <div class="btn-group">
                 <button type="button" class="btn btn-primary"></button>
                 <br>
-                <button type="button" class="btn btn-success"></button>
+                <button type="button" class="btn bg-purple"></button>
                 <button type="button" class="btn btn-info"></button>
                 <button type="button" class="btn btn-warning"></button>
                 <button type="button" class="btn btn-danger"></button>
@@ -78,7 +78,7 @@
                         <div class="card p-3 text-center shadow-sm shadow-y">
                             <img src="../public/images/pantone/coolorsblue.jpg" class="card-img-top" alt="pantone">
 
-                            <div class="card-body">
+                            <div class="card-body text-left">
                                 <h5 class="card-title">BLUUE</h5>
                                 <p class="card-text"> #104B83 </p>
                             </div>
@@ -95,7 +95,7 @@
                         <div class="card p-3  text-center shadow-sm shadow-y" >
                             <img src="../public/images/pantone/coolorsyellow.jpg" class="card-img-top" alt="pantone">
 
-                            <div class="card-body">
+                            <div class="card-body text-left">
                                 <h5 class="card-title">YELLOOW</h5>
                                 <p class="card-text">#FED601</p>
                             </div>
@@ -110,9 +110,9 @@
                     <!-- Col 3 -->
                     <div class="col-md-6 col-lg-3 p-3  text-center ">
                         <div class="card p-3 text-center shadow-sm shadow-y" >
-                            <img src="../public/images/pantone/coolorswhite.jpg" class="card-img-top" alt="pantone">
+                            <img src="../public/images/pantone/coolorswhite.jpg" class="card-img-top bg-light border " alt="pantone">
 
-                            <div class="card-body">
+                            <div class="card-body text-left">
                                 <h5 class="card-title">WHIITE</h5>
                                 <p class="card-text">#FFFFFF</p>
                             </div>
@@ -129,7 +129,7 @@
                         <div class="card p-3 text-center " >
                             <img src="../public/images/pantone/coolorsrose.jpg" class="card-img-top" alt="pantone">
 
-                            <div class="card-body">
+                            <div class="card-body text-left">
                                 <h5 class="card-title">ROOSE</h5>
                                 <p class="card-text">#FACBCC</p>
                             </div>
@@ -152,7 +152,7 @@
                         <div class="card p-3 text-center shadow-sm shadow-y">
                             <img src="../public/images/pantone/coolorsorange.jpg" class="card-img-top" alt="soumoji">
 
-                            <div class="card-body">
+                            <div class="card-body text-left">
                                 <h5 class="card-title">ORAANGE</h5>
                                 <p class="card-text">#FD5904</p>
                                 
@@ -170,7 +170,7 @@
                         <div class="card p-3 text-center shadow-sm shadow-y">
                             <img src="../public/images/pantone/coolorsgreen.jpg" class="card-img-top" alt="soumoji">
 
-                            <div class="card-body">
+                            <div class="card-body text-left">
                                 <h5 class="card-title">GREEEEN</h5>
                                 <p class="card-text">#02891A</p>
                                 
@@ -188,7 +188,7 @@
                         <div class="card p-3 text-center shadow-sm shadow-y">
                             <img src="../public/images/pantone/coolorsrainbow.jpg" class="card-img-top" alt="soumoji">
 
-                            <div class="card-body">
+                            <div class="card-body text-left">
                                 <h5 class="card-title">RAINBOOW</h5>
                                 <p class="card-text">#######</p>
                                 
@@ -206,7 +206,7 @@
                         <div class="card p-3 text-center shadow-sm shadow-y">
                             <img src="../public/images/pantone/coolorsblack.jpg" class="card-img-top" alt="soumoji">
 
-                            <div class="card-body">
+                            <div class="card-body text-left">
                                 <h5 class="card-title">BLAACK</h5>
                                 <p class="card-text">#000000</p>
                                 
