--- a/view/index.html
+++ b/view/index.html
@@ -109,8 +109,8 @@
 
                     <!-- Col 3 -->
                     <div class="col-md-6 col-lg-3 p-3  text-center ">
-                        <div class="card p-3 text-center shadow-sm shadow-y" >
-                            <img src="../public/images/pantone/coolorswhite.jpg" class="card-img-top" alt="pantone">
+                        <div class="card p-3 text-center shadow-sm shadow-y " >
+                            <img src="../public/images/pantone/coolorswhite.jpg" class="card-img-top mb-2" alt="pantone">
 
                             <div class="card-body">
                                 <h5 class="card-title">WHIITE</h5>
