--- a/view/homepage.html
+++ b/view/homepage.html
@@ -21,7 +21,7 @@
         <ul>
             <li class="ROUGE"> <a href="http://127.0.0.1:5500/html/homepage.html"></a> </li>
             <li class="YELLOW"><a href="#"></a></li>
-            <li class="BLUE"><a href="#"></a></li>
+            <li class="BLUE"><a href="blue.php"></a></li>
             <li class="VERT"><a href="#"></a></li>
             <li class="ROSE"><a href="#"></a></li>
             <li class="NOIR"><a href="#"></a></li>
