--- a/view/index.html
+++ b/view/index.html
@@ -85,7 +85,7 @@
 
                             <div class="card-footer text-center border-0 bg-transparent">
                                 <hr class="w-25 mx-auto mb-4">
-                                <a href="../view/blue.php" class="btn btn-outline-primary mb-2"> Watch here</a>
+                                <a href="../view/blueview.php" class="btn btn-outline-primary mb-2"> Watch here</a>
                             </div>
                         </div>
                     </div>  
